Revision history for Perl extension Pod::Spell::CommonMistakes

* 0.01

	initial release