@@ -1,16 +1,0 @@
-Build.PL
-MANIFEST
-MANIFEST.SKIP
-README
-Makefile.PL
-META.yml
-Changes
-LICENSE
-
-lib/Pod/Spell/CommonMistakes.pm
-lib/Pod/Spell/CommonMistakes/WordList.pm
-
-examples/simple.pl
-
-t/1_load.t
-t/apocalypse.t
