@@ -1,4 +1,8 @@
-Revision history for Perl extension Pod::Spell::CommonMistakes
+Revision history for {{$dist->name}}
+
+{{$NEXT}}
+
+	Converted to Dist::Zilla for the release process
 
 * 0.01
 
